--- a/templates/base.html
+++ b/templates/base.html
@@ -7,8 +7,8 @@
     {% assets "css_all" %}
     <link rel="stylesheet" href="{{ ASSET_URL }}" />
     {% endassets %}
+    <link rel="icon" type="image/png" href="/static/imgs/icon-transparent-64.png" />
     {#
-    <link rel="icon" type="image/png" href="/static/imgs/TODO.png" />
     <link rel="apple-touch-icon"      href="/static/imgs/TODO.png" />
     #}
     <meta name="author" content="Baptiste Fontaine" />
