--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
+{% block body_class %}index{% endblock %}
 {% block body %}
-<h1>{{ _("Teebr") }}</h1>
-<p>{{ _("Insert here a buzzwords-ready Web 3.0 social Cloud 3D-printed description.") }}</p>
+<h1 class="title">{{ _("Teebr") }}</h1>
+<p class="tagline">{{ _("Find interesting accounts on Twitter.") }}</p>
+
+<div class="row">
+    <div class="col-md-4 social-buttons">
+        <a href="{{ url_for("twitter_login") }}"
+        class="social-twitter btn btn-default btn-lg">Sign in with Twitter</a>
+    </div>
+</div>
 {% endblock %}
