--- a/static/css/utils.less
+++ b/static/css/utils.less
@@ -9,6 +9,8 @@ a.text {
   color: inherit;
 }
 
+.top20 { margin-top: 20px; }
+
 .transition(@duration, @interpolation, @prop: all) {
   -webkit-transition: @prop @duration @interpolation;
      -moz-transition: @prop @duration @interpolation;
