--- a/templates/home.html
+++ b/templates/home.html
@@ -16,10 +16,10 @@
       <div class="row status-actions top20">
         <a href="#"
            class="col-md-3 col-md-offset-2 btn btn-success btn-lg"
-           ng-click="rateStatus(true)">{{ _("Yep") }}</a>
+           ng-click="rateStatusYes()">{{ _("Yep") }}</a>
         <a href="#"
            class="col-md-2 col-md-offset-2 btn btn-danger btn-lg"
-           ng-click="rateStatus(false)">{{ _("Nope") }}</a>
+           ng-click="rateStatusNo()">{{ _("Nope") }}</a>
       </div>
       <div class="status-other-actions top20">
         <a href="#" ng-click="skipStatus()">{{ _("Skip") }}</a>&nbsp;{#
