--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-md-4 social-buttons">
         <a href="{{ url_for("twitter_login") }}"
-        class="social-twitter btn btn-default btn-lg">Sign in with Twitter</a>
+        class="social-twitter btn btn-default btn-lg">{{ _("Sign in with Twitter") }}</a>
     </div>
 </div>
 {% endblock %}
