settings page added

--- a/static/css/home.less
+++ b/static/css/home.less
@@ -7,8 +7,12 @@ body.home {
   }
 
   .status-content {
-    font-size: 3rem;
-    border: 1px solid #DDD;
+    font-size: 34px;
+    min-height: 235px;
+    cursor: default;
+
+    box-shadow: 1px 6px 15px #EEE;
+    padding: 20px 40px;
   }
 
   .status-actions .btn {
