--- a/static/css/utils.less
+++ b/static/css/utils.less
@@ -10,6 +10,7 @@ a.text {
 }
 
 .top20 { margin-top: 20px; }
+.top40 { margin-top: 40px; }
 
 .transition(@duration, @interpolation, @prop: all) {
   -webkit-transition: @prop @duration @interpolation;
