--- a/static/css/app.css
+++ b/static/css/app.css
@@ -6,6 +6,9 @@ a.text {
 .top20 {
   margin-top: 20px;
 }
+.top40 {
+  margin-top: 40px;
+}
 html {
   height: 100%;
 }
@@ -50,8 +53,11 @@ body.home .statuses-feed {
   margin-top: 50px;
 }
 body.home .status-content {
-  font-size: 3rem;
-  border: 1px solid #DDD;
+  font-size: 34px;
+  min-height: 235px;
+  cursor: default;
+  box-shadow: 1px 6px 15px #EEE;
+  padding: 20px 40px;
 }
 body.home .status-actions .btn {
   font-size: 1.4em;
@@ -59,4 +65,19 @@ body.home .status-actions .btn {
 }
 body.home .status-other-actions {
   text-align: center;
+}
+body.user-settings form.user-settings {
+  text-align: center;
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
+body.user-settings form.user-settings .table td,
+body.user-settings form.user-settings .table th {
+  border: none;
+}
+body.user-settings form.user-settings .light-help {
+  color: #666;
+}
+body.user-settings form.user-settings h2 {
+  margin-top: 100px;
 }
