--- a/templates/home.html
+++ b/templates/home.html
@@ -9,20 +9,20 @@
     <div class="status col-md-8 col-md-offset-2">
       <div class="row">
         <div class="status-content col-sm-12">{#
-          #}<span class="status-text" ng-bind-html="status.text | tweet_html"></span>{#
+          #}<span class="status-text" ng-bind-html="status | tweet_html_text"></span>{#
         #}</div>
       </div>
       <div class="row status-actions top40">
         <a href="#"
            class="col-sm-3 col-sm-offset-2 btn btn-success btn-lg"
-           ng-click="rateStatusYes()">{{ _("Yep") }}</a>
+           ng-click="rateStatusYes($event)">{{ _("Yep") }}</a>
         <a href="#"
            class="col-sm-2 col-sm-offset-2 btn btn-danger btn-lg"
-           ng-click="rateStatusNo()">{{ _("Nope") }}</a>
+           ng-click="rateStatusNo($event)">{{ _("Nope") }}</a>
       </div>
       <div class="status-other-actions top20">
-        <a href="#" ng-click="skipStatus()">{{ _("Skip") }}</a>&nbsp;{#
-          #}&bull;&nbsp;<a href="#" ng-click="reportAsSpam()">{{ _("Report as Spam") }}</a>
+        <a href="#" ng-click="skipStatus($event)">{{ _("Skip") }}</a>&nbsp;{#
+          #}&bull;&nbsp;<a href="#" ng-click="reportAsSpam($event)">{{ _("Report as Spam") }}</a>
       </div>
     </div>
   </div>
