recommendations page layout tweaks

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -102,15 +102,26 @@ body.user-settings form.user-settings .light-help {
 body.user-settings form.user-settings h2 {
   margin-top: 100px;
 }
+/* adapt the number of columns to the width of the window */
+.user-padded-container {
+  width: 310px;
+  padding: 10px;
+}
+@media (min-width: 992px) {
+  .user-padded-container {
+    width: 230px;
+  }
+}
+@media (min-width: 1200px) {
+  .user-padded-container {
+    width: 280px;
+  }
+}
 .recommendations h1 {
-  margin-bottom: 100px;
+  margin-bottom: 80px;
 }
 .recommendations .user-menu-container.open {
   z-index: 2;
-}
-.recommendations .user-padded-container {
-  width: 250px;
-  padding: 10px;
 }
 .recommendations .user-container {
   background-color: #F7F7F7;
@@ -120,9 +131,13 @@ body.user-settings form.user-settings h2 {
   height: 80px;
   background-repeat: no-repeat;
   background-size: cover;
+  border-top-left-radius: 2px;
+  border-top-right-radius: 2px;
 }
 .recommendations .user-container .user-avatar-container {
+  display: inline-block;
   position: relative;
+  margin-right: 18px;
   width: 54px;
   height: 54px;
   padding: 3px;
@@ -137,8 +152,45 @@ body.user-settings form.user-settings h2 {
 .recommendations .user-container .user-screen-name {
   font-weight: bold;
   color: #333333;
+  font-size: 1.2em;
+  position: relative;
+  top: -8px;
 }
 .recommendations .user-container .user-desc {
   padding: 10px 15px;
   overflow: hidden;
+  font-style: italic;
+}
+.recommendations .user-container .user-counters {
+  list-style: none;
+  text-align: center;
+  padding-left: 12px;
+  padding-right: 12px;
+}
+.recommendations .user-container .user-counters .user-counter {
+  display: inline-block;
+  width: 28%;
+  margin-bottom: 20px;
+}
+.recommendations .user-container .user-counters .user-counter .user-counter-value,
+.recommendations .user-container .user-counters .user-counter .user-counter-label {
+  display: block;
+}
+.recommendations .user-container .user-counters .user-counter .user-counter-value {
+  font-weight: bold;
+  color: #404040;
+}
+.recommendations .user-container .user-counters .user-counter .user-counter-label {
+  font-size: 0.9em;
+  color: #474747;
+  position: relative;
+  top: -1px;
+}
+.recommendations .user-container .user-counters,
+.recommendations .user-container .user-avatar-container {
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
